--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -1,24 +1,27 @@
-.box{
+/* ***** Common : Start ***** */
+/*Responsive Box*/
+.box {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap
+  flex-wrap: wrap;
 }
-.material-icons{
+.material-icons {
   font-size: 2.4em;
   cursor: pointer;
 }
+/*Responsive card*/
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
+  max-width: 200px;
   margin: auto;
   text-align: center;
   font-family: arial;
 }
 
-.marginR20{
+.marginR20 {
   margin-right: 20px;
 }
-.font1rm{
+.font1rm {
   font-size: 1rem;
 }
 
@@ -42,6 +45,52 @@
 .card button:hover {
   opacity: 0.7;
 }
+
+.item-desc {
+  align-self: center;
+}
+
+.collection .collection-item {
+  display: flex;
+}
+.collection-item.avatar .title {
+  font-size: 20px;
+  font-weight: 500;
+  color: #ee6e73;
+  display: block;
+  margin-bottom: 20px;
+}
+.collection .collection-item img {
+  width: 150px;
+  margin-right: 25px;
+}
+
+/*Responsive text*/
+.rsptext {
+  padding: 10px;
+}
+
+@media screen and (min-width: 601px) {
+  .rsptext {
+    font-size: 10px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .rsptext {
+    font-size: 5px;
+  }
+}
+
+/*Responsive Image CSS*/
+.resbookimg {
+  width: 100%;
+  height: auto;
+  max-width: 300px;
+}
+/* ***** Common : End ***** */
+
+/* ***** Product Details : Start ***** */
 
 .itemDetail {
   margin: auto;
@@ -85,10 +134,9 @@
   float: right;
   width: 50%;
 }
+/* ***** Product Details : Start ***** */
 
-.item-desc{
-  align-self:center;
-}
+/* ***** My Orders : Start ***** */
 
 .myordLeftTxt {
   float: left;
@@ -102,68 +150,40 @@
   text-align: right;
 }
 
-/*Responsive Image CSS*/
-.resbookimg {
-  width: 100%;
-  height: auto;
-  max-width: 300px;
-}
-/*Responsive text CSS: Start*/
-.rsptext {
-  padding: 10px;
+.itmTtl {
+  font-size: 15px;
+  font-weight: bold;
+  margin: 5px;
+  width: auto;
+  height: 50px;
 }
 
-@media screen and (min-width: 601px) {
-  .rsptext {
-    font-size: 10px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .rsptext {
-    font-size: 5px;
-  }
-}
-
-.h1txt{
+.itmPrice {
   font-size: 10px;
-  line-height: 110%;
+  font-weight: bold;
 }
-/*Responsive text CSS: End*/
-.addremovebtns{
- font-size: 30px;
+/* ***** My Orders : End ***** */
+
+/* ***** Cart : Start ***** */
+
+.addremovebtns {
+  font-size: 30px;
 }
-.cart{
-  margin-top:40px;
+.cart {
+  margin-top: 40px;
 }
 
-.cartLeftPanel{
+.cartLeftPanel {
   float: left;
   width: 40%;
 }
 
-.cartRightPanel{
+.cartRightPanel {
   float: right;
   width: 60%;
 }
 
-.shipAddTxtArea{
+.shipAddTxtArea {
   width: 80%;
 }
-
-.collection .collection-item{
-  display: flex;
-}
-.collection-item.avatar .title {
-  font-size: 20px;
-  font-weight: 500;
-  color: #ee6e73;
-  display: block;
-  margin-bottom: 20px;
-  
-}
-.collection .collection-item img{
-  width: 150px;
-  margin-right: 25px;
-}
-
+/* ***** Cart : End ***** */
